# cgrep

./: .gitignore  CMakeLists.txt  README.md  file_utils.c  main.c  output_handler.c  output_handler.h  search_result.c  search_result.h  searcher.c  searcher.h
include/: arg_parser.h  colors.h  csv_utils.h  exit_status.h  file_utils.h  json_utils.h  output_handler.h  search_result.h  search_status.h  searcher.h
src/: arg_parser.c  csv_utils.c  file_utils.c  json_utils.c  main.c  output_handler.c  search_result.c  searcher.c
